all java code create.. Login,Register,Tickete Booking, and retriever booking details

--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/t_btn1_bg"
         android:padding="18dp"
@@ -23,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_appTopic" />
+        app:layout_constraintTop_toBottomOf="@+id/logoutbtn" />
 
     <Button
         android:id="@+id/t_mainSafariBtn"
@@ -44,7 +44,7 @@
         android:id="@+id/t_appTopic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/aclonica"
         android:text="@string/appName"
         android:textColor="#FFFFFF"
@@ -113,6 +113,17 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/t_ratetxt" />
 
+    <Button
+        android:id="@+id/logoutbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        android:text="@string/logoutBtn"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/t_appTopic" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
