--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,24 +8,22 @@
     tools:context=".Login">
 
     <EditText
-        android:id="@+id/d_InputUserName"
+        android:id="@+id/d_loginAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:background="@drawable/d_input_bg"
         android:ems="10"
+        android:hint="@string/d_loginaddress"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
-        android:text="@string/d_loginname"
         android:textColor="@color/white"
-        android:textColorHint="@color/cardview_dark_background"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,13 +134,14 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
         android:ems="10"
+        android:hint="@string/d_loginpassword"
         android:inputType="textPassword"
         android:padding="10dp"
-        android:text="@string/d_loginpassword"
         android:textColor="#FBFBFB"
-        app:layout_constraintEnd_toEndOf="@+id/d_InputUserName"
-        app:layout_constraintStart_toStartOf="@+id/d_InputUserName"
-        app:layout_constraintTop_toBottomOf="@+id/d_InputUserName" />
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/d_loginAddress"
+        app:layout_constraintStart_toStartOf="@+id/d_loginAddress"
+        app:layout_constraintTop_toBottomOf="@+id/d_loginAddress" />
 
     <TextView
         android:id="@+id/d_signtext1"
@@ -151,13 +150,13 @@
         android:layout_marginTop="10dp"
         android:text="@string/d_forgettxt"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/d_signtext2"
+        app:layout_constraintEnd_toStartOf="@+id/d_signup_txt"
         app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toStartOf="@+id/d_btnlogin"
         app:layout_constraintTop_toBottomOf="@+id/d_btnlogin" />
 
     <TextView
-        android:id="@+id/d_signtext2"
+        android:id="@+id/d_signup_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -166,6 +165,17 @@
         android:textColor="#FD0000"
         app:layout_constraintBaseline_toBaselineOf="@+id/d_signtext1"
         app:layout_constraintEnd_toEndOf="@+id/d_btnlogin" />
+
+    <ProgressBar
+        android:id="@+id/progresslogin"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
