--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,25 +8,24 @@
     tools:context=".Register">
 
     <EditText
-        android:id="@+id/d_InputUserName"
+        android:id="@+id/d_loginAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:background="@drawable/d_input_bg"
         android:ems="10"
+        android:hint="@string/d_loginname"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
-        android:text="@string/d_loginname"
         android:textColor="#FFFFFF"
-        android:textColorHint="@color/cardview_dark_background"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/d_Feedback" />
@@ -69,13 +68,14 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
         android:ems="10"
+        android:hint="@string/d_email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:text="@string/d_email"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/d_InputUserName"
-        app:layout_constraintStart_toStartOf="@+id/d_InputUserName"
-        app:layout_constraintTop_toBottomOf="@+id/d_InputUserName" />
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/d_loginAddress"
+        app:layout_constraintStart_toStartOf="@+id/d_loginAddress"
+        app:layout_constraintTop_toBottomOf="@+id/d_loginAddress" />
 
     <EditText
         android:id="@+id/d_contact"
@@ -84,16 +84,17 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/d_input_bg"
         android:ems="10"
+        android:hint="@string/d_contact"
         android:inputType="phone"
         android:padding="10dp"
-        android:text="@string/d_contact"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/d_email"
         app:layout_constraintStart_toStartOf="@+id/d_email"
         app:layout_constraintTop_toBottomOf="@+id/d_email" />
 
     <EditText
-        android:id="@+id/d_passwrd1"
+        android:id="@+id/d_loginpassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -120,8 +121,42 @@
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/d_passwrd1"
-        app:layout_constraintStart_toStartOf="@+id/d_passwrd1"
-        app:layout_constraintTop_toBottomOf="@+id/d_passwrd1" />
+        app:layout_constraintEnd_toEndOf="@+id/d_loginpassword"
+        app:layout_constraintStart_toStartOf="@+id/d_loginpassword"
+        app:layout_constraintTop_toBottomOf="@+id/d_loginpassword" />
+
+    <ProgressBar
+        android:id="@+id/regProgress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/d_loging_here"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:shadowColor="#FA0000"
+        android:text="@string/d_loginhere"
+        android:textColor="#FF0000"
+        app:layout_constraintBottom_toBottomOf="@+id/d_already_txt"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/d_already_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/d_register"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toStartOf="@+id/d_loging_here"
+        app:layout_constraintHorizontal_bias="0.91"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/d_regBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
