--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,11 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/s_input"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="@string/s_4Seat"
+        android:inputType="numberDecimal"
         android:padding="10dp"
-        android:text="@string/s_4Seat"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_placeInput"
         app:layout_constraintStart_toStartOf="@+id/s_placeInput"
         app:layout_constraintTop_toBottomOf="@+id/s_placeInput" />
@@ -57,10 +58,11 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/s_input"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="@string/s_6Seat"
+        android:inputType="numberDecimal"
         android:padding="10dp"
-        android:text="@string/s_6Seat"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_4input"
         app:layout_constraintStart_toStartOf="@+id/s_4input"
         app:layout_constraintTop_toBottomOf="@+id/s_4input" />
@@ -72,10 +74,11 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/s_input"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="@string/s_8Seat"
+        android:inputType="numberDecimal"
         android:padding="10dp"
-        android:text="@string/s_8Seat"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_4input"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/s_4input"
@@ -89,10 +92,11 @@
         android:background="@drawable/s_input"
         android:drawableEnd="@drawable/s_ic_baseline_calendar_today_24"
         android:ems="10"
+        android:hint="@string/s_date"
         android:inputType="date"
         android:padding="10dp"
-        android:text="@string/s_date"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_8input"
         app:layout_constraintStart_toStartOf="@+id/s_8input"
         app:layout_constraintTop_toBottomOf="@+id/s_8input" />
