--- a/app/src/main/res/layout/activity_ticketsearch.xml
+++ b/app/src/main/res/layout/activity_ticketsearch.xml
@@ -58,11 +58,12 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/t_input_bg"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="@string/t_fullTicket"
+        android:inputType="numberDecimal"
         android:padding="10dp"
         android:shadowColor="#FFFFFF"
-        android:text="@string/t_fullTicket"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/t_nationalityInput"
         app:layout_constraintStart_toStartOf="@+id/t_nationalityInput"
@@ -75,10 +76,11 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/t_input_bg"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="@string/t_halfTicket"
+        android:inputType="numberDecimal"
         android:padding="10dp"
-        android:text="@string/t_halfTicket"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/t_full_tkt"
         app:layout_constraintStart_toStartOf="@+id/t_full_tkt"
@@ -106,6 +108,7 @@
         android:background="@drawable/d_input_bg"
         android:drawableRight="@drawable/s_ic_baseline_calendar_today_24"
         android:ems="10"
+        android:hint="@string/t_date"
         android:inputType="date"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
@@ -113,9 +116,20 @@
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/t_half_tkt"
         app:layout_constraintStart_toStartOf="@+id/t_half_tkt"
-        app:layout_constraintTop_toBottomOf="@+id/t_half_tkt"
-        tools:text="@string/t_date" />
+        app:layout_constraintTop_toBottomOf="@+id/t_half_tkt" />
+
+    <TextView
+        android:id="@+id/tktUserID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        android:textColor="#FAFAFA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/t_booktopic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
